--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,16 +1,8 @@
 .main-box {
   width: 100%;
   .view-box {
-    width: 1170px;
-    margin: 0 auto;
-    background-color: red;
-    padding:24px 0;
     text-align: center;
-    p {
-      font-size: 28px;
-      font-weight: bold;
-      color:white;
-    }
+    margin-top: 120px;
   }
 }
 .public-bureau {
