--- a/src/comsmine/nav/nav.scss
+++ b/src/comsmine/nav/nav.scss
@@ -3,11 +3,17 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  height: 80px;
+  height: 120px;
   align-items: center;
   padding: 0 24px;
   color: black;
-  box-shadow: 0 -5px 15px black;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  position: fixed;
+  top:0;
+  left:0;
+  z-index: 1000;
+  background: white;
+  transition: .3s all;
   .iconfont {
     font-size: 24px;
     cursor: pointer;
@@ -17,8 +23,8 @@
     display: flex;
     align-items: center;
     img {
-      width: 240px;
-      height: 68px;
+      width: 156px;
+      height: 48px;
     }
   }
   .tools-right {
@@ -28,17 +34,18 @@
       display: flex;
       align-items: center;
       li {
-        margin-left: 40px;
         cursor: pointer;
         font-size: 16px;
-        transition: .3s all;
+        transition: 0.3s all;
+        padding: 0 15px;
         a {
-          color: #222a42;
+          color: $text-color;
         }
       }
-      .active-nav{
-        a{
-          color:#33b1ff;
+      .active-nav {
+        a {
+          color: $nav-active;
+          font-weight: bold;
         }
       }
     }
@@ -46,7 +53,7 @@
       margin-left: 24px;
       cursor: pointer;
     }
-    .left-first{
+    .left-first {
       margin-left: 80px;
     }
   }
