--- a/src/view/about/about.scss
+++ b/src/view/about/about.scss
@@ -1,3 +1,81 @@
 .about-us {
   padding-top: 120px;
+  width: 1170px;
+  margin: 0 auto;
+  .about-top-con {
+    width: 100%;
+    display: flex;
+    margin-bottom: 80px;
+    .top-msg {
+      flex: 1;
+      text-align: left;
+      padding-bottom: 40px;
+      img {
+        width: 208px;
+        height: 64px;
+        margin-left: 40px;
+      }
+      .seg-line {
+        width: 100%;
+        height: 1px;
+        background-color: $line-color;
+        margin: 40px 0;
+      }
+      .public-msg {
+        padding: 0 40px;
+      }
+      .msg-title {
+        font-size: 40px;
+        font-weight: bold;
+        color: $nav-active;
+        margin-bottom: 40px;
+      }
+      .msg-par {
+        font-size: 18px;
+        line-height: 36px;
+        color: $text-color;
+      }
+      p:last-child {
+        margin-top: 40px;
+      }
+    }
+    .top-remark-msg {
+      width: 370px;
+      height: 560px;
+      margin-right: -80px;
+      margin-left: 70px;
+    }
+  }
+  .about-bottom-con {
+    padding: 120px 0 80px 0;
+    background-color: $white-text;
+    margin-bottom: 120px;
+    width: 5500px;
+    display: flex;
+    img {
+      margin-left: -40px;
+      height: 560px;
+      width: 370px;
+    }
+    .bottom-msg {
+      width: 770px;
+      text-align: left;
+      margin-left: 110px;
+      padding-top: 40px;
+      .bot-title {
+        font-size: 40px;
+        font-weight: bold;
+        color: $nav-active;
+        margin-bottom: 40px;
+      }
+      .public-msg-bot {
+        color: $text-color;
+        font-size: 18px;
+        line-height: 36px;
+      }
+      p:last-child {
+        margin-top: 40px;
+      }
+    }
+  }
 }
