--- a/src/view/project/project.scss
+++ b/src/view/project/project.scss
@@ -1,3 +1,34 @@
 .project-box {
-  
+  width: 1170px;
+  margin: 0 auto;
+  padding-top: 80px;
+  .project-remark {
+    padding: 40px;
+    display: flex;
+    text-align: left;
+    .msg-box {
+      flex: 1;
+      .msg-title {
+        font-size: 40px;
+        color: $nav-active;
+        font-weight: bold;
+        margin-bottom: 40px;
+      }
+      .msg-text {
+        font-size: 18px;
+        color: $text-color;
+        line-height: 36px;
+      }
+    }
+    img {
+      width: 330px;
+      margin-left: 70px;
+    }
+  }
+  .pre-line {
+    width: 100%;
+    height: 1px;
+    background-color: $line-color;
+    margin:80px 0 60px;
+  }
 }
