--- a/src/comsmine/bottom_nav/bottom_nav.scss
+++ b/src/comsmine/bottom_nav/bottom_nav.scss
@@ -34,7 +34,7 @@
       background-color: $text-color;
       margin: 40px 0;
     }
-    .contact-us {
+    .contact-us-footer {
       p:first-child {
         font-size: 18px;
         font-weight: bold;
