--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -147,11 +147,45 @@ button {
   font-size: 16px;
   color: #505050;
   cursor: pointer;
+  transition: .1s all;
+  box-sizing: border-box;
 }
 
 ul li {
   list-style: none;
 }
-.ant-dropdown{
+
+.ant-dropdown {
   padding-top: 10px;
+}
+
+button:hover {
+  border: 3px solid #898989;
+}
+
+.per-line {
+  width: 100%;
+  height: 1px;
+  background-color: #ddd;
+}
+
+.play-btn {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.39);
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  margin-left: -40px;
+  margin-top: -40px;
+}
+
+.play-btn .iconfont {
+  font-size: 32px;
+  color: white;
 }
