--- a/src/comsmine/nav/nav.scss
+++ b/src/comsmine/nav/nav.scss
@@ -1,19 +1,27 @@
 //头部导航
 .nav-header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
   height: 120px;
-  align-items: center;
-  padding: 0 24px;
-  color: black;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-  position: fixed;
-  top:0;
-  left:0;
-  z-index: 1000;
-  background: white;
-  transition: .2s all;
+  .nav-header-inner {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+    color: black;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    z-index: 1000;
+    background: white;
+    transition: 0.3s all;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  .hidden-shadow{
+    box-shadow: none;
+  }
+  .source-map {
+    display: none;
+  }
   .iconfont {
     font-size: 24px;
     cursor: pointer;
@@ -25,6 +33,13 @@
     img {
       width: 156px;
       height: 48px;
+    }
+    .art-title {
+      display: none;
+      .art-title-inner {
+        opacity: 0;
+        transition: 0.3s all;
+      }
     }
   }
   .tools-right {
@@ -55,6 +70,55 @@
     }
     .left-first {
       margin-left: 80px;
+    }
+  }
+}
+.different-nav {
+  .tools-left {
+    .art-title {
+      display: block;
+      .art-title-inner {
+        display: flex;
+        align-items: center;
+        opacity: 1;
+        .title-line {
+          width: 1px;
+          height: 40px;
+          background-color: $line-color;
+          margin: 0 40px;
+        }
+        p {
+          font-size: 20px;
+          color: $nav-active;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+  .tools-right {
+    transition: 0.3s all;
+    opacity: 0;
+  }
+  .source-map {
+    display: block;
+    margin-top: 0;
+    .map-inner {
+      display: flex;
+      p {
+        width: 28px;
+        height: 28px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $text-color;
+        margin-left: 16px;
+        border-radius: 50%;
+        cursor: pointer;
+        .iconfont {
+          font-size: 16px;
+          color: white;
+        }
+      }
     }
   }
 }
