--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -189,3 +189,14 @@ button:hover {
   font-size: 32px;
   color: white;
 }
+.loading-box-mine{
+  flex:1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ant-spin-dot-item{
+  background-color: #CCB86A;
+}
