--- a/src/view/about/about.scss
+++ b/src/view/about/about.scss
@@ -6,6 +6,7 @@
     width: 100%;
     display: flex;
     margin-bottom: 80px;
+    min-height: 600px;
     .top-msg {
       flex: 1;
       text-align: left;
@@ -44,6 +45,13 @@
       height: 560px;
       margin-right: -80px;
       margin-left: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
   .about-bottom-con {
@@ -52,10 +60,17 @@
     margin-bottom: 120px;
     width: 5500px;
     display: flex;
-    img {
+    .bottom-msg-st {
       margin-left: -40px;
       height: 560px;
       width: 370px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
     .bottom-msg {
       width: 770px;
@@ -76,6 +91,11 @@
       p:last-child {
         margin-top: 40px;
       }
+    }
+    .loading-box-mine{
+      justify-content: flex-start;
+      padding-left: 200px;
+      margin-top: 200px;
     }
   }
 }
