--- a/.env.master
+++ b/.env.master
@@ -1,3 +1,4 @@
+NODE_ENV = 'production'
 REACT_APP_NODE_ENV = 'production'
 REACT_APP_CURRENTMODE = 'production'
 REACT_APP_RESET = 'https://debughodl.first.vip'
