--- a/src/view/contact/form/form.scss
+++ b/src/view/contact/form/form.scss
@@ -114,7 +114,8 @@
     text-align: left;
     margin-bottom: 160px;
     button {
-      padding: 12px 48px;
+      width: 128px;
+      height: 40px;
       background-color: $nav-active;
       color: white;
       font-weight: 18px;
