联系我们补充

--- a/src/view/contact/contact.scss
+++ b/src/view/contact/contact.scss
@@ -54,6 +54,11 @@
       }
     }
   }
+  .intorduce-box{
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+  }
   .intorduce-text {
     text-align: left;
     font-size: 18px;
