--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -192,3 +192,10 @@ button:hover {
 .ant-spin-dot-item{
   background-color: #CCB86A;
 }
+.no-data-tag p{
+  line-height: 120px;
+  text-align: center;
+  color:#505050;
+  font-size: 16px;
+  width: 100%;
+}
