--- a/src/view/contact/contact.scss
+++ b/src/view/contact/contact.scss
@@ -2,6 +2,9 @@
   width: 1170px;
   margin: 0 auto;
   padding-top: 120px;
+  .loading-box-mine {
+    min-height: auto;
+  }
   .contact-title {
     display: flex;
     height: 52px;
@@ -54,7 +57,7 @@
       }
     }
   }
-  .intorduce-box{
+  .intorduce-box {
     min-height: 200px;
     display: flex;
     align-items: center;
@@ -72,7 +75,7 @@
     font-size: 24px;
     color: $nav-active;
     font-weight: bold;
-    margin:80px 0 40px;
+    margin: 80px 0 40px;
     text-align: left;
   }
 }
