--- a/src/view/project/pro_list/list.scss
+++ b/src/view/project/pro_list/list.scss
@@ -1,4 +1,5 @@
 .pro-list {
+  min-height: 400px;
   ul {
     li {
       margin-bottom: 40px;
@@ -21,7 +22,8 @@
           display: flex;
           justify-content: space-between;
           button {
-            padding: 19px 52px;
+            width: 138px;
+            height: 56px;
             white-space: nowrap;
             font-weight: bold;
           }
