接口对接完成

--- a/src/view/media/type_details/next_detail/next.scss
+++ b/src/view/media/type_details/next_detail/next.scss
@@ -2,6 +2,9 @@
   padding: 0 20px;
   margin-top: 40px;
   cursor: pointer;
+  .loading-box-mine{
+    min-height: 100px;
+  }
   p:first-child {
     display: flex;
     justify-content: space-between;
