--- a/src/view/media/type_details/podcast/detail_p.scss
+++ b/src/view/media/type_details/podcast/detail_p.scss
@@ -1,3 +1,8 @@
+.podcast-parent {
+  .loading-box-mine {
+    min-height: 600px;
+  }
+}
 .podcast-detail {
   padding: 80px 40px 120px;
   width: 1170px;
