--- a/src/view/media/recommend_type/recommend.scss
+++ b/src/view/media/recommend_type/recommend.scss
@@ -3,6 +3,7 @@
   padding-bottom: 20px;
   display: flex;
   flex-direction: column;
+  width: 370px;
   .title-and-line {
     .re-title {
       display: flex;
