--- a/src/view/media/type_details/more_detail/more.scss
+++ b/src/view/media/type_details/more_detail/more.scss
@@ -1,6 +1,11 @@
 .view-more {
   text-align: center;
   margin-top: 80px;
+  .loading-box-mine{
+    min-height: auto;
+    height: 48px;
+    // transform: translateY(2px);
+  }
   .more-title {
     font-size: 18px;
     color: $text-color;
@@ -28,13 +33,13 @@
   .feedback-address {
     height: 48px;
     input {
-      height: 100%;
+      height: 48px;
       width: 260px;
       background-color: $white-text;
       padding-left: 24px;
     }
     button {
-      height: 100%;
+      height: 48px;
       width: 80px;
       border: 0;
       background-color: $btn-bg;
