--- a/src/view/media/type_details/video/detail_v.scss
+++ b/src/view/media/type_details/video/detail_v.scss
@@ -1,16 +1,20 @@
 .video-detail {
   padding-bottom: 120px;
   width: 100%;
+  .loading-box-mine{
+    min-height: 800px;
+  }
   .video-source-box {
     width: 100%;
     height: 600px;
     background-color: $white-text;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     position: relative;
     margin-bottom: 140px;
-    img {
-      width: 1090px;
-      height: 100%;
+    .react-player {
+      width: 1090px!important;
+      height: 100%!important;
       transform: translateY(80px);
     }
     .play-btn {
