--- a/.env.master
+++ b/.env.master
@@ -2,4 +2,4 @@ NODE_ENV = 'production'
 REACT_APP_NODE_ENV = 'production'
 REACT_APP_CURRENTMODE = 'production'
 REACT_APP_RESET = 'https://debughodl.first.vip'
-REACT_APP_BASEURL = 'https://debugasset.first.vip/api1'
+REACT_APP_BASEURL = 'http://61.capital/apidoc'
